--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/general-faq/general-faq.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/general-faq/general-faq.component.html
@@ -14,11 +14,11 @@
           </div>
 
           <div id="question" class="question col-9">
-            <p class="titre-question"><i class="far fa-circle"></i> Can I end my days?</p>
+            <p class="titre-question"><i class="far fa-circle"></i> Question numero 01 ?</p>
             <i class="fas fa-angle-up"></i>
           </div>
           <div id="reponse" class="reponse col-9">
-            <p class="texte-reponse">No, I still haven't commited and pushed on GitHub (but if someone else than me is seeing this, I probably did now).</p>
+            <p class="texte-reponse">Si voluit accusare, pietati tribuo, si iussus est, necessitati, si speravit aliquid, pueritiae. Si voluit accusare, pietati tribuo, si iussus est, necessitati, si speravit aliquid, pueritiae. Si voluit accusare, pietati tribuo, si iussus est, necessitati, si speravit aliquid, pueritiae.</p>
           </div>
 
           <div class="question col-9">
