--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/product-list/product-list.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/product-list/product-list.component.html
@@ -21,7 +21,9 @@
             </div>
           </form>
         </div>
-        <div id="mapid" class="mapid col-12"></div>
+        <div id="mapid" class="mapid col-12">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.457388048809!2d3.0604003157381636!3d50.637196079501585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d587d0c0137f%3A0x2eb2efa1411d4619!2s1%20Rue%20Esquermoise%2C%2059800%20Lille!5e0!3m2!1sfr!2sfr!4v1579557662723!5m2!1sfr!2sfr" width="1030" height="350" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
       </div>
     </div>
   </div>
