--- a/angularProject/nogashiFront/src/app/components/pages/pages_individual/welcome-individual/welcome-individual.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_individual/welcome-individual/welcome-individual.component.html
@@ -229,7 +229,7 @@
 
   <!-- BOUTON UP -->
   <div class="fond-up">
-    <div id="bouton-up" class="bouton-up">
+    <div id="bouton-up" class="bouton-up" (click)="scrollToTop()">
       <i class="fas fa-chevron-up"></i>
     </div>
   </div>
