--- a/angularProject/nogashiFront/src/app/components/pages/pages_individual/welcome-individual/welcome-individual.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_individual/welcome-individual/welcome-individual.component.scss
@@ -484,7 +484,7 @@ h2 {
   bottom: 2%;
   -webkit-box-shadow: 3px 3px 5px 5px rgba(0, 0, 0, .1);
   box-shadow: 3px 3px 5px 5px rgba(0, 0, 0, .1);
-  position: absolute;
+  position: fixed;
   cursor: pointer;
 }
 
