--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/welcome-merchant/welcome-merchant.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/welcome-merchant/welcome-merchant.component.scss
@@ -19,7 +19,7 @@
   bottom: 2%;
   -webkit-box-shadow: 3px 3px 5px 5px rgba(0, 0, 0, .1);
   box-shadow: 3px 3px 5px 5px rgba(0, 0, 0, .1);
-  position: absolute;
+  position: fixed;
   cursor: pointer;
 }
 
