Modifications de l'univers.

--- a/angularProject/nogashiFront/src/app/components/modules/scheduler-week-txt/scheduler-week-txt.component.scss
+++ b/angularProject/nogashiFront/src/app/components/modules/scheduler-week-txt/scheduler-week-txt.component.scss
@@ -1,18 +1,16 @@
 .bloc-horaires {
-  background-color: var(--couleurGrisClair);
-  border-top: 1px solid var(--couleurNoir);
   padding-top: 15px;
   padding-bottom: 15px;
 }
 
+
 .titre-horaires {
   font-family: 'Ubuntu', sans-serif;
-  font-size: 1.3em;
+  font-size: 1.1em;
   font-weight: 600;
+  text-align: center;
   text-decoration: underline var(--couleurBlancCreme);
   color: var(--couleurNoir);
-  padding-top: 20px;
-  margin-left: 30px;
 }
 
 .fa-clock {
@@ -20,7 +18,6 @@
 }
 
 .bloc-text-horaires {
-  margin-left: 60px;
   display: flex;
 }
 
@@ -66,10 +63,10 @@
 
 .text-edition {
   font-family: 'Ubuntu', sans-serif;
-  font-size: 1.1em;
+  font-size: 1em;
   font-weight: 600;
   color: var(--couleurBlancCreme);
-  margin-left: 60px;
+  margin-left: 30px;
   margin-bottom: 7px;
 }
 
@@ -104,7 +101,7 @@
 }
 
 .bloc-edition {
-  margin-left: 60px;
+  margin-left: 30px;
 }
 
 .bloc-select {
@@ -128,7 +125,7 @@
   color: var(--couleurNoir);
   border: 1.5px solid #000;
   border-radius: 5px;
-  padding-left: 10px;
+  padding-left: 0px;
 }
 
 .liste-deroulante2 {
