--- a/angularProject/nogashiFront/src/app/components/modules/scheduler-week-txt/scheduler-week-txt.component.html
+++ b/angularProject/nogashiFront/src/app/components/modules/scheduler-week-txt/scheduler-week-txt.component.html
@@ -1,6 +1,9 @@
 
 
-<div class="col-xs-12">
+<div class="container">
+  <div class="row">
+
+
   <div *ngIf="scheduler_simplified">
 
     <div class="bloc-horaires">
@@ -83,5 +86,9 @@
       </div>
     </div>
   </div>
+
+
+
+</div>
 </div>
 
