--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/add-commerce/add-commerce.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/add-commerce/add-commerce.component.scss
@@ -1,6 +1,15 @@
 
-
-
+.section-fiche-produit {
+  background: rgba(161,161,161,1);
+  background: -moz-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(161,161,161,1)), color-stop(5%, rgba(161,161,161,1)), color-stop(94%, rgba(102,102,102,1)), color-stop(100%, rgba(102,102,102,1)));
+  background: -webkit-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: -o-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: -ms-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: linear-gradient(135deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a1a1a1', endColorstr='#666666', GradientType=1 );
+  padding-bottom: 40px;
+}
 
 /* SECTION -> Bloc Détails Commerce */
 
@@ -8,12 +17,28 @@
   display: none;
 }
 
+.titre-modifications-commerce {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1.6em;
+  font-weight: 600;
+  text-align: center;
+  color: var(--couleurNoir);
+  padding-top: 95px;
+}
 
-.bloc-ouverture-commerce {
-  margin-top: 70px;
-  background-color: var(--couleurBlancCreme);
+.bloc-img {
   display: block;
-  box-shadow: 10px 15px 20px 2px rgba(0,0,0,0.15);
+  margin-left: 50%;
+  transform: translate(-30%);
+}
+
+.img {
+}
+
+.super-bloc-fiche-produit {
+  background-color: var(--couleurBlancCreme);
+  box-shadow: 4px 4px 6px 1px rgba(0, 0, 0, 0.30);
+  margin-top: 150px;
 }
 
 .img-vitrine {
