Modification de.......je suis trop mort

--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/find-us/find-us.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/find-us/find-us.component.html
@@ -62,10 +62,10 @@
           </div>
           <br>
           <div class="nom-commerce">
-            <img class="logo-commerce" src="/assets/img/commerce/freshway.jpg" alt="">
+            <img class="logo-commerce" src="/assets/img/commerce/subways.jpg" alt="">
             <div class="texte">
-              <p class="marque-commerce">Freshway</p>
-              <p class="adresse-commerce">141 Boulevard de la Liberté, 59800 Lille</p>
+              <p class="marque-commerce">Subways</p>
+              <p class="adresse-commerce">61 Rue Nationale</p>
             </div>
           </div>
           <br>
