--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.html
@@ -28,11 +28,11 @@
                <br>
                <br>
                <p class="texte col-8"> Les chiffres parlent d’eux-mêmes, <span class="phrase-cle2"> le gaspillage alimentaire représente 30 kg par personne </span> et par an et <span class="phrase-cle2"> 432 000 tonnes de nourriture gaspillée par la restauration (collective et commerciale).</span>  Face à ce constat nous avons décider d’agir et de créer une solution pour promouvoir l’anti-gaspillage.
-                 <span class="nom-app">No Gâchis</span>  met en relation les particuliers et commerçants dans une optique <span class="phrase-cle2">« gagnant gagnant » </span>. Nous proposons une vitrine pour les commençants en leur garantissant la mise en avant des produits alimentaires invendus auprès de notre communauté de manière simple et rapide. <span class="nom-app">No Gashis</span> offre à notre communauté un moyen de faire des économies en réservant les produits du jour invendus à prix réduit tout en permettant à nos commerçants partenaires de réduire le gaspillage.</p>
+                 <span class="nom-app">No Gâchis</span>  met en relation les particuliers et commerçants dans une optique <span class="phrase-cle2">« gagnant gagnant » </span>. Nous proposons une vitrine pour les commençants en leur garantissant la mise en avant des produits alimentaires invendus auprès de notre communauté de manière simple et rapide. Nous offrons à notre communauté un moyen de faire des économies en réservant les produits du jour invendus à prix réduit tout en permettant à nos commerçants partenaires de réduire le gaspillage.</p>
                <br>
                <p class="phrase-cle"><span class="quote"><i class="fas fa-quote-left"></i></span> Le gaspillage alimentaire représente 30 kg par personne et par an. <span class="quote"><i class="fas fa-quote-right"></i></span></p>
                <br>
-           <p class="texte col-8">Nous nous engageons dans cette optique à mettre en relation les différents acteurs au niveau local afin de lutter efficacement contre le gaspillage alimentaire. Dans cette optique, <span class="nom-app">No Gâchis</span> permet à nos associations partenaires de réserver des denrées alimentaires consommables invendus auprès des commerçants de notre réseaux.</p>
+           <p class="texte col-8">Nous nous engageons à mettre en relation les différents acteurs au niveau local afin de lutter efficacement contre le gaspillage alimentaire. Dans cette optique, <span class="nom-app">No Gâchis</span> permet à nos associations partenaires de réserver des denrées alimentaires consommables invendus auprès des commerçants de notre réseaux.</p>
                <br>
                <br>
          </div>
@@ -112,7 +112,7 @@
 
         <div class="bloc-logo">
            <img class="logo" src="assets/img/commerce/basilic.png" alt="Basilic">
-           <img class="logo" src="assets/img/commerce/freshway.jpg" alt="Freshway">
+           <img class="logo" src="assets/img/commerce/subways.jpg" alt="Subways">
            <img class="logo" src="assets/img/commerce/daily-juicery.png" alt="Daily Juicery">
            <img class="logo" src="assets/img/commerce/boulangerie-mathieu.jpeg" alt="Boulangerie Mathieu">
         </div>
