--- a/angularProject/nogashiFront/src/app/components/modules/scheduler-week-txt/scheduler-week-txt.component.scss
+++ b/angularProject/nogashiFront/src/app/components/modules/scheduler-week-txt/scheduler-week-txt.component.scss
@@ -1,6 +1,7 @@
 .bloc-horaires {
   padding-top: 15px;
   padding-bottom: 15px;
+
 }
 
 
@@ -13,12 +14,17 @@
   color: var(--couleurNoir);
 }
 
+.fond-horaires {
+
+}
+
 .fa-clock {
   color: var(--couleurVerte);
 }
 
 .bloc-text-horaires {
   display: flex;
+
 }
 
 .text-jour {
@@ -59,6 +65,9 @@
   padding-top: 30px;
   padding-bottom: 30px;
   margin-bottom: 30px;
+  -webkit-box-shadow: 21px 24px 9px -17px rgba(0,0,0,0.14);
+  -moz-box-shadow: 21px 24px 9px -17px rgba(0,0,0,0.14);
+  box-shadow: 21px 24px 9px -17px rgba(0,0,0,0.14);
 }
 
 .text-edition {
