--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/find-us/find-us.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/find-us/find-us.component.scss
@@ -1,4 +1,14 @@
 
+a {
+  text-decoration: none;
+  color: var(--couleurBlancCreme);
+}
+
+a:hover {
+  text-decoration: none;
+  color: var(--couleurVerte);
+}
+
 /* SECTION -> Trouver */
 .bloc-nous-trouver {
   background-image: url("/assets/img/pattern/groovepaper2.png");
@@ -17,7 +27,7 @@
   background-color: rgba(255, 255, 255, 0.90);
   box-shadow: 10px 15px 20px 2px rgba(0,0,0,0.15);
   position: absolute;
-  z-index: 999;
+  z-index: 1;
   display: block;
 }
 
