--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/command-confirmation/command-confirmation.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/command-confirmation/command-confirmation.component.html
@@ -1,5 +1,5 @@
 
-<app-command-steps></app-command-steps>
+<app-command-steps [step]="3" ></app-command-steps>
 
 
 <section class="section-resumer-commande">
