--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/product-item-in-cart-by-commerce/product-item-in-cart-by-commerce.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/product-item-in-cart-by-commerce/product-item-in-cart-by-commerce.component.html
@@ -4,25 +4,28 @@
 
 <!-- Un product du shoppingCartByCommerce -->
 
-Recap
+<!-- Recap
 <tr class="tr">
-  <td class="td-produits col-3">{{product.name}}  {{product.typedName}}</td>
-  <td class="td col-3">{{product.price}} €</td> <!-- TODO prix en fonction du statut du produit ou deja fait a ce stade ? -->
+  <td class="td-produits col-3">{{lpt.pt.name}}  {{lpt.pt.typedName}}</td>
+  <td class="td col-3">{{lpt.pt.price}} €</td> --><!-- TODO prix en fonction du statut du produit ou deja fait a ce stade ? --><!--
   <td class="td col-5">01</td>
-  <td class="td col-1">{{product.maxDurationCart}} minutes</td>
+  <td class="td col-1">{{lpt.pt.maxDurationCart}} minutes</td>
   <td class="td col-1"> €</td>
   <td class="td col-1"></td>
 </tr>
+-->
 
-
-Panier
+<!-- Panier -->
 <tbody>
   <tr class="tr">
-    <td class="td-produit"><img class=" img" src="/assets/img/produit/{{product.image}}" alt="image de {{product.image}}">{{product.name}}  {{product.typedName}}</td>
-    <td class="td ">{{product.price}} €</td>
-    <td class="td">02<i class="fas fa-plus-circle"></i><i class="fas fa-less-circle"></i><i class="fas fa-minus-circle"></i></td>
-    <td class="td">{{product.maxDurationCart}} minutes</td>
-    <td class="td"> €</td>
+    <td class="td-produit"><img class=" img" src="/assets/img/produit/{{lpt.pt.image}}" alt="image de {{lpt.pt.image}}">{{lpt.pt.name}}  {{lpt.pt.typedName}}</td>
+    <td class="td ">{{lpt.pt.price}} €</td>
+    <td class="td">{{lpt.lp.length}}
+        <i class="fas fa-plus-circle"></i>
+        <i class="fas fa-less-circle"></i>
+        <i class="fas fa-minus-circle"></i>
+    </td>
+    <td class="td">{{lpt.pt.maxDurationCart}} minutes</td>
     <td class="td"><i class="fas fa-trash-alt"></i></td>
   </tr>
 </tbody>
