--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/product-template-common-view/product-template-common-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/product-template-common-view/product-template-common-view.component.html
@@ -35,6 +35,12 @@
         <p class="adresse-affichage"><span class="icones-affichage"><i class="far fa-envelope"></i> / </span> thedailyjuicery@gmail.com </p>
       </div>
       -->
+
+      <div *ngIf="commerces.length!=0"></div>
+      <select class="liste-deroulante"  [(ngModel)]="currentCommerceIndex" >
+        <option class="option" *ngFor="let c of commerces; index as i" [ngValue]="i" >{{c.name}} {{c.uniqueIdName}} - {{this.nbProductByCommerce[i]}} produits</option>
+      </select>
+
       <h5>- <a [routerLink]="'/productSheet/' + productTemplate.id">{{productTemplate.name}}</a> -</h5>
       <p class="composition-affichage">{{productTemplate.description}}</p>
       <p class="key-allergene"> > Sans-gluten > Sportif </p>
@@ -47,16 +53,16 @@
           </div>
         </div>
         <div class="bloc-quantite-produit col-6">
-          <input class="quantite-produit" type="text" name="quantite" placeholder="1" >
+          <input [(ngModel)]="numberProductTemplate" class="quantite-produit" type="number" name="quantite" >
           <div class="plus-moins">
-            <i class="fas fa-plus-circle"></i>
-            <i class="fas fa-minus-circle"></i>
+            <i (click)="numberProductTemplate = numberProductTemplate + 1" class="fas fa-plus-circle"></i>
+            <i (click)=" numberProductTemplate = (numberProductTemplate >= 1) ? (numberProductTemplate - 1) : 0  " class="fas fa-minus-circle"></i>
           </div>
         </div>
       </div>
     </div>
     <div class="bloc-panier">
-      <a routerLink="/common/cart/add"><div id ="bouton-panier" class="bouton-panier"><i class="fas fa-shopping-bag"></i>AJOUTER AU PANIER</div></a>
+      <a (click)="addProduct()" ><div id ="bouton-panier" class="bouton-panier"><i class="fas fa-shopping-bag"></i>AJOUTER AU PANIER</div></a>
     </div>
   </div>
 
